cmake_minimum_required(VERSION 3.2)
add_subdirectory(boost_http_example)
add_subdirectory(boost_sharedptr)
add_subdirectory(std_vector_sharedptr)
add_subdirectory(socket_server_hello_world)
add_subdirectory(boost_asio_example)
add_subdirectory(tpl_functions)
add_subdirectory(std_pointer_cast)
add_subdirectory(aws_using_acceptor)